Include all Froala files, Fix Align Dropdown Bug
Changes:
1. Included all Froala CSS
2. Fixed align bug with dropdown

--- a/app/components/editors/TextEditor/text-editor.css
+++ b/app/components/editors/TextEditor/text-editor.css
@@ -22,8 +22,3 @@
   border: none !important;
   background: transparent;
 }
-
-.text-editor:hover,
-.text-editor-extension:hover {
-  cursor: text;
-}
